# spprof

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meson.build  meson_options.txt  pyproject.toml  setup.py  valgrind.supp
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  memory.py  overhead.py  run_all.py  threading.py
docs/: ARCHITECTURE.md  PERFORMANCE_TUNING.md  TROUBLESHOOTING.md  USAGE.md  memprofiler_spec.md
examples/: basic_memprof.py  basic_profile.py  combined_profile.py  debug_native.py  extended_profile.py  memprof_review.py  mixed_mode_profile.py  production_memprof.py  production_profile.py  simple_profile.py  threaded_profile.py
scripts/: test_all_versions.ps1  verify_freethreading.sh
specs/001-linux-create-timer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-linux-create-timer/checklists/: requirements.md
specs/001-linux-create-timer/contracts/: thread-registry-api.md
specs/001-python-sampling-profiler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-sampling-profiler/checklists/: requirements.md
specs/001-python-sampling-profiler/contracts/: c-internal-api.md  python-api.md
specs/002-resolve-todos-cleanup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-resolve-todos-cleanup/checklists/: requirements.md
specs/003-darwin-mach-sampler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-darwin-mach-sampler/checklists/: requirements.md
specs/003-darwin-mach-sampler/contracts/: mach-sampler-api.md
specs/004-internal-api-only/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-internal-api-only/checklists/: requirements.md
specs/004-internal-api-only/contracts/: internal-frame-api.md
specs/005-linux-freethreading/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-linux-freethreading/checklists/: requirements.md
specs/005-linux-freethreading/contracts/: speculative-capture-api.md
specs/006-memory-profiler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-memory-profiler/checklists/: requirements.md
specs/006-memory-profiler/contracts/: c-internal-api.md  python-api.md
src/spprof/: __init__.py  _profiler.pyi  memprof.py  meson.build  output.py
src/spprof/_ext/: code_registry.c  code_registry.h  error.h  framewalker.c  framewalker.h  framewalker_internal.c  module.c  resolver.c  resolver.h  ringbuffer.c  ringbuffer.h  signal_handler.c  signal_handler.h  unwind.c  unwind.h
src/spprof/_ext/compat/: py311.h  py312.h  py313.h  py314.h  py39.h
src/spprof/_ext/internal/: pycore_frame.h  pycore_tstate.h
src/spprof/_ext/memprof/: bloom.c  bloom.h  heap_map.c  heap_map.h  memprof.c  memprof.h  sampling.c  sampling.h  stack_capture.c  stack_capture.h  stack_intern.c  stack_intern.h
src/spprof/_ext/platform/: darwin.c  darwin_mach.c  darwin_mach.h  darwin_memprof.c  linux.c  linux_memprof.c  platform.h  windows.c  windows_memprof.c
tests/: __init__.py  conftest.py  test_code_registry.py  test_coverage.py  test_darwin_mach.py  test_freethreading.py  test_memprof.py  test_memprof_data_structures.py  test_memprof_safety.py  test_memprof_stress.py  test_native_unwinding.py  test_output.py  test_platform.py  test_profiler.py  test_signal_safety.py  test_stress.py  test_threading.py  test_version_compat.py
