[build-system]
requires = ["meson-python>=0.15.0", "meson>=1.2.0"]
build-backend = "mesonpy"

[project]
name = "spprof"
version = "0.1.0"
description = "High-performance sampling profiler for Python applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "spprof contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
keywords = ["profiler", "sampling", "performance", "flamegraph", "speedscope"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "meson>=1.2.0",
    "meson-python>=0.15.0",
    "ninja",
]

[project.urls]
Homepage = "https://github.com/Periecle/spprof"
Documentation = "https://github.com/Periecle/spprof#readme"
Repository = "https://github.com/Periecle/spprof"
Issues = "https://github.com/Periecle/spprof/issues"

# =============================================================================
# Meson-python configuration
# =============================================================================
[tool.meson-python.args]
setup = ['--warnlevel=2']
install = ['--skip-subprojects']

# =============================================================================
# cibuildwheel configuration
# =============================================================================
[tool.cibuildwheel]
# Build for CPython only (no PyPy)
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = [
    "*-musllinux_*",      # Skip musllinux (Alpine) - less common
    "*-win32",            # Skip 32-bit Windows
    "*i686",              # Skip 32-bit Linux
]

# Test the built wheels
test-requires = ["pytest>=7.0", "pytest-timeout>=2.0"]
test-command = "pytest {project}/tests/test_profiler.py -v --tb=short"

# Build in isolated environment
build-frontend = "build"

[tool.cibuildwheel.linux]
# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Install meson and ninja in the build environment
before-build = "pip install meson ninja"

[tool.cibuildwheel.macos]
# Build universal2 wheels for macOS (x86_64 + arm64)
archs = ["x86_64", "arm64"]

# Minimum macOS version
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
# Only 64-bit Windows
archs = ["AMD64"]

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
timeout = 30

# =============================================================================
# mypy configuration
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
exclude = ["build", "dist"]

[[tool.mypy.overrides]]
module = "spprof._native"
ignore_missing_imports = true

# =============================================================================
# Ruff - Fast Python linter and formatter (replaces black, isort, flake8)
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument
    "ARG001", # Unused function argument (common in APIs)
    "SIM108", # Ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["spprof"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# Coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["src/spprof"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
fail_under = 60
